[tool.poetry]
name = "tf1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
tgan = "^0.1.0"
jupyter = "^1.0.0"
black = "^20.8b1"
jupyter_contrib_nbextensions = "^0.5.1"
nose = "^1.3.7"
papermill = "^2.2.0"
category-encoders = "^2.2.2"
jupytext = "^1.6.0"
optuna = "^2.2.0"
matplotlib = "^3.3.2"
lightgbm = "^3.0.0"
seaborn = "^0.11.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
